test/custom_configs/bad/002-BadEncoder.h
#define ENCODER_DT_PIN 3
#define ENCODER_CLK_PIN 3
